# aphelion

./: README.md  pyproject.toml
src/: Mesh.py  main.py
src/aphelion/: __init__.py  window.py
src/aphelion/core/: pipeline_manager.py
src/aphelion/core/opengl/: __init__.py  constants.py  functions.py
src/aphelion/core/sdl2/: window.py
src/aphelion/core/win32/: context.py  opengl.py  pfd.py  types.py  window.py
src/aphelion/rendering/: vertex.py
src/aphelion/shaders/: apsl.py  shader.py
