[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aphelion"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "youthx", email = "youthxf@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/youthx/aphelion#readme"
Issues = "https://github.com/youthx/aphelion/issues"
Source = "https://github.com/youthx/aphelion"

[tool.hatch.version]
path = "src/aphelion/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/aphelion tests}"

[tool.coverage.run]
source_pkgs = ["aphelion", "tests"]
branch = true
parallel = true
omit = [
  "src/aphelion/__about__.py",
]

[tool.coverage.paths]
aphelion = ["src/aphelion", "*/aphelion/src/aphelion"]
tests = ["tests", "*/aphelion/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
